tests/invalid_code/binary_expr.bs
fn main() {
    _ = 1 && "";
    _ = nil || 1;
}